--- a/.github/workflows/my-starter-workflow.yml
+++ b/.github/workflows/my-starter-workflow.yml
@@ -15,6 +15,9 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy to your project.
   call-reusable-workflow:
+    strategy:
+      matrix:
+        nodeversion: [14, 16, 18, 20]
     uses: ./.github/workflows/reusable-workflow.yml
     with:
-      node: 14
+      node: ${{matrix.nodeversion}}
